Fix missing border

--- a/src/app/components/streak-days/streak-days.component.scss
+++ b/src/app/components/streak-days/streak-days.component.scss
@@ -1,4 +1,6 @@
 .streak-days-container {
+  margin-top: -1px;
+  
   .embeded-summary {
     display: flex;
     border-bottom: 1px solid gainsboro;
